# pydogceo

./: .gitignore  LICENSE  README.md  examples.py  pyproject.toml
pydogceo/: PyDogCeo.py  __init__.py
pydogceo/config/: BaseConfiguration.py  __init__.py
pydogceo/request/: BaseRequest.py  __init__.py
pydogceo/routes/: Breed.py  Breeds.py  Image.py  Images.py  __init__.py
tests/: __init__.py  test_Breed.py  test_Breeds.py  test_Image.py  test_Images.py
