[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydogceo-tomsouris"
version = "0.0.1"
authors = [
  { name="tomsouris", email="thomas.maus90@gmail.com" },
]
description = "A Python API Wrapper for the DOG CEO API"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
]

[project.urls]
"Homepage" = "https://github.com/tomsouris/pydogceo"
"Bug Tracker" = "https://github.com/tomsouris/pydogceo/issues"